src/minigames/sprint/sprint.scss
@import "./src/scss/main";
.body-sprint {
  background: url("/src/img/sprint/background.png") no-repeat center center;
  background-size: cover;
}
.hidden {
  display: none !important;
}
.sprint {
  position: relative;
  width: 700px;
  min-width: 320px;
  height: 100vh;
  margin: 80px auto;
  text-align: center;
}
.score {
  display: inline-block;
  height: 100px;
  padding: 20px;
  font-size: 3.5rem;
  line-height: 80px;
  color: #179298;
}
.timer {
  position: absolute;
  right: -160px;
  width: 100px;
  height: 100px;
}
.progressbar-text {
  font-size: 2.5rem;
  color: #179298 !important;
}
.card {
  position: relative;
  border: 1px solid #eeeeee;
  border-radius: 10px;
  -moz-box-shadow: 0px 0px 5px 2px rgba(50, 50, 50, 0.15);
  -webkit-box-shadow: 0px 0px 5px 2px rgba(50, 50, 50, 0.15);
  box-shadow: 0px 0px 5px 2px rgba(50, 50, 50, 0.15);
  width: 100%;
  background-color: #C1EFFF;
  overflow: hidden;
  min-height: 600px;
}
.answer-correct {
  color: white;
  font-size: 0.8rem;
  height: 120px;
}
.answer-correct__list {
  display: inline-block;
  list-style-type: none;
  margin: 15px auto;
  padding: 0;
}
.answer-correct__list-item {
  float: left;
  margin: 10px;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #179298;

  &.active:after {
    content: '✔';
  }
}
.bonus {
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100px;
  background-color: #03BDE3;
  color: white;
  border-radius: 10px 10px 0 0;
  .answer-correct__list {
    margin-bottom: 0;
  }
}
.current-bonus {
  font-size: 1.5rem;
}
.fadeInDown {
  -webkit-animation-name: fadeInDown;
  animation-name: fadeInDown;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}
@-webkit-keyframes fadeInDown {
  0% {
    //opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
  }
  100% {
    //opacity: 1;
    -webkit-transform: none;
    transform: none;
  }
}
@keyframes fadeInDown {
  0% {
    //opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
  }
  100% {
    //opacity: 1;
    -webkit-transform: none;
    transform: none;
  }
}
.progress-images {
  display: inline-block;
  //background: url("../../img/sprint/owl-sprite.png");
  //background-size: contain;
  //height: 100px;
  background-color: inherit;
  background-image: url("../../img/sprint/owl-sprite.png");
  width: 480px;
  height: 165px;
}
.icon-progress_1 {
  background-position: 0px 0px;
}
.icon-progress_2 {
  background-position: 0px -165px;
}
.icon-progress_3 {
  background-position: -480px 0px;
}
.icon-progress_4 {
  background-position: -480px -165px;
}
.icon-progress_5 {
  background-position: 0px -330px;
}
.word,
.word-translate {
  height: 80px;
}
.word,
.word-translate {
  font-size: 2rem;
  text-transform: lowercase;
}
.word {
  font-weight: bold;
}
.answer-incorrect {
  height: 30px;
  width: 30px;
  margin: 0 auto;
  border-radius: 50%;
  background-color: #FF7C79;
  color: white;
  font-size: 1.35rem;
}
.control-buttons {
  position: relative;
  height: 100px;
  padding-top: 40px;
  margin: -15px 40px 0;
  border-top: 1px dotted gray;
}
.button {
  width: 150px;
  height: 50px;
  color: white;
  font-size: 1.5rem;
  border-radius: 10px;
  margin: 0 10px;
  cursor: pointer;
 }
.button-wrong {
  background-color: #FF7C79;
}
.button-right {
  background-color: #179298;
}
.control-arrow {
  display: inline-block;
  margin-top: 50px;
  cursor: pointer;
}
.button-arrow {
  width: 50px;
  height: 50px;
  font-size: 1.2rem;
  font-weight: bold;
  padding-bottom: 5px;
  margin: 0 10px;
  border: 3px double #eeeeee;
  border-radius: 10px;
  background-color: #c1efff;
}
.tada {
  -webkit-animation-name: tada;
  animation-name: tada;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}
@-webkit-keyframes tada {
  0% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  10%, 20% {
    -webkit-transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
    transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
  }
  30%, 50%, 70%, 90% {
    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
  }
  40%, 60%, 80% {
    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
  }
  100% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}
@keyframes tada {
  0% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  10%, 20% {
    -webkit-transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
    transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
  }
  30%, 50%, 70%, 90% {
    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
  }
  40%, 60%, 80% {
    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
  }
  100% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}

.image-sound {
  position: absolute;
  right: 5%;
  top: 45px;
  height: 40px;
  width: 40px;
  background: url("../../img/sprint/on.png") no-repeat right;
  background-size: 40px;
  cursor: pointer;
  &.active {
    background-image: url("../../img/sprint/off.png");
  }
}
.invisible {
  visibility: hidden;
}
.score-end-of-game {
  color: #34a600;
}
.finish {
  display: flex;
  position: relative;
  margin-top: 180px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  background-image: url("../../img/sprint/end.png");
  background-size: contain;
  background-repeat: no-repeat;
  color: #3F8CA6;
}
.finish-header {
  font-size: 2.5rem;
  font-weight: bold;
  margin-top: 15rem;
  margin-bottom: 3rem;
}
.max-score_row {
  margin-top: 1rem;
  font-size: 1.5rem;
}
.max-score {
  color: #34a600;
}
.image-smile {
  position: absolute;
  background-image: url("../../img/sprint/smile.png");
  background-repeat: no-repeat;
  background-size: 150px;
  width: 150px;
  height: 150px;
}

